# Python-Django

./: .gitignore
M_02_DjangoIntro/mysite/: pyproject.toml
M_02_DjangoIntro/mysite/mysite/: asgi.py  settings.py  urls.py
M_02_DjangoIntro/mysite/shopapp/: admin.py  models.py  urls.py  views.py
M_02_DjangoIntro/mysite/shopapp/commands/: create_products.py
M_02_DjangoIntro/mysite/shopapp/migrations/: 0001_initial.py
M_03_DatabaseAndModels/mysite/: pyproject.toml
M_03_DatabaseAndModels/mysite/mysite/: settings.py
M_03_DatabaseAndModels/mysite/shopapp/: admin.py  models.py  urls.py  views.py
M_03_DatabaseAndModels/mysite/shopapp/migrations/: 0001_initial.py  0002_order.py
M_08_DjangoAuthentication/homework/: README.md  db.sqlite3  pyproject.toml
M_08_DjangoAuthentication/homework/homework/: settings.py  urls.py  views.py
M_08_DjangoAuthentication/homework/shopapp/: forms.py  urls.py  views.py
M_09_RegistrationAndAuthorization/homework/: README.md  db.sqlite3  pyproject.toml
M_09_RegistrationAndAuthorization/homework/accounts/: admin.py  forms.py  models.py  urls.py  views.py
M_09_RegistrationAndAuthorization/homework/accounts/migrations/: 0001_initial.py
M_09_RegistrationAndAuthorization/homework/homework/: settings.py  urls.py
M_09_RegistrationAndAuthorization/homework/news_site/: admin.py  models.py  urls.py  views.py
M_09_RegistrationAndAuthorization/homework/news_site/migrations/: 0001_initial.py  0002_userprofile_birth_date_article.py  0003_alter_userprofile_city_alter_userprofile_phone.py
M_09_RegistrationAndAuthorization/homework/shopapp/: admin.py  forms.py  models.py  product.json  task.py  task1.py  urls.py  views.py
M_09_RegistrationAndAuthorization/homework/shopapp/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_alter_product_rating.py  0003_alter_product_image.py  0003_alter_product_rating.py
M_10_Files/homework/: db.sqlite3  pyproject.toml
M_10_Files/homework/accounts/: forms.py  models.py  urls.py  views.py
M_10_Files/homework/accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0002_profile_avatar.py  0003_alter_profile_user.py
M_10_Files/homework/blogs/: admin.py  forms.py  models.py  urls.py  views.py
M_10_Files/homework/blogs/migrations/: 0001_initial.py
M_10_Files/homework/homework/: settings.py  urls.py
M_10_Files/homework/shopapp/: forms.py  models.py  product.json  task.py  views.py
M_10_Files/homework/shopapp/migrations/: 0001_initial.py  0002_alter_product_image.py
M_11_Avatars/: README.md  pyproject.toml
M_11_Avatars/homework/: db.sqlite3
M_11_Avatars/homework/homework/: settings.py  urls.py
M_11_Avatars/homework/myAuth/: forms.py  models.py  urls.py  views.py
M_13_DjangoCaching/homework/: README.md  db.sqlite3  pyproject.toml  task.py  text.txt  text1.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt
M_13_DjangoCaching/homework/accounts/: apps.py  forms.py  models.py  urls.py
M_13_DjangoCaching/homework/blogs/: admin.py  forms.py  models.py  urls.py  views.py
M_13_DjangoCaching/homework/homework/: settings.py  urls.py
M_13_DjangoCaching/homework/shopapp/: admin.py  cart.py  category.py  context_processor_catalog.py  forms.py  models.py  task.py  urls.py  views.py
M_15_Documentation/homework/: README.md  pyproject.toml
M_15_Documentation/homework/bookapi/: admin.py  models.py  task.py  urls.py  views.py
M_15_Documentation/homework/homework/: settings.py  urls.py
mysite/: asgi.py  urls.py  (+2 more)
(+480 files in other folders)
